--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
       - key: PORT
         value: 10000
 
-  - type: static
+  - type: static_site
     name: postit-frontend
     branch: main
     rootDir: client
