--- a/render.yaml
+++ b/render.yaml
@@ -10,12 +10,15 @@ services:
       - key: PORT
         value: 10000
 
-  - type: static_site
+  - type: web
     name: postit-frontend
+    env: node
     branch: main
     rootDir: client
     buildCommand: npm install && npm run build
-    publishPath: build
+    startCommand: npx serve -s build -l $PORT
     envVars:
+      - key: PORT
+        value: 3000
       - key: REACT_APP_API_URL
         value: https://postit-backend.onrender.com
