--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,5 @@
 services:
+  # Backend Service
   - type: web
     name: postit-backend
     env: node
@@ -10,6 +11,7 @@ services:
       - key: PORT
         value: 10000
 
+  # Frontend Service
   - type: web
     name: postit-frontend
     env: node
